added new screen

--- a/frontend/login.kv
+++ b/frontend/login.kv
@@ -1,10 +1,12 @@
 windowManager:
 	loginWindow:
 	levelsWindow:
+	GameWindow:
 
 
 <levelsWindow>:
 
+<GameWindow>:
 
 # login/signup window
 <loginWindow>:
