added selecting game level

--- a/frontend/login.kv
+++ b/frontend/login.kv
@@ -1,10 +1,13 @@
 windowManager:
 	loginWindow:
 	levelsWindow:
+	menuWindow:
 	GameWindow:
 
 
 <levelsWindow>:
+
+<menuWindow>:
 
 <GameWindow>:
 
