--- a/frontend/board.kv
+++ b/frontend/board.kv
@@ -155,6 +155,7 @@
 
                     on_press:
                         RESET.background_color = (180/255,181/255,44/255,1)
+                        root.reset_game()
 
                     on_release:
                         RESET.background_color = (219/255,221/255,56/255,1)
