--- a/frontend/login.kv
+++ b/frontend/login.kv
@@ -56,6 +56,8 @@ windowManager:
 		TextInput:
 			id : pwd1
 			multiline : False
+            hint_text: "password"
+            password: True
 			size_hint : 0.27, 0.075
 			opacity: 0.7
 			pos_hint : {"x" : 0.18, "top" : 0.62}
