multiplayer - basic skeleton

--- a/frontend/board.kv
+++ b/frontend/board.kv
@@ -164,7 +164,7 @@
 
                 Button:
                     text: "Pause"
-                    id: PAUSE
+                    id: pause
 
                     background_color: (18/255,186/255,149/255,1)
                     background_normal: ''
