--- a/frontend/board.kv
+++ b/frontend/board.kv
@@ -98,6 +98,12 @@
                 Label:
                     text: "Hints left: 3/3"
 
+            Label:
+                size_hint_y: None
+                text_size: self.width, None
+                height: self.texture_size[1]
+                text: "aby wyświetlić swoje robocze cyfry, kliknij dwa razy na pole sudoku"
+
             BoxLayout:
                 id: table_id
 
