fixed calculating errors + refactor

--- a/frontend/board.kv
+++ b/frontend/board.kv
@@ -144,11 +144,11 @@
 
                 Button:
                     text: "show error (db)"
-                    on_press: root.displayErrorsDB()
+                    on_press: root.display_errors_db()
 
                 Button:
                     text: "show error\n(calculate)"
-                    on_press: root.displayErrorsCalc()
+                    on_press: root.display_errors_calc()
 
             GridLayout:
                 cols:3
