--- a/frontend/levels.kv
+++ b/frontend/levels.kv
@@ -35,19 +35,19 @@
                 text : "EASY"
                 on_release:
                     root.manager.transition.direction = "up"
-                    root.changeLevel(1)
+                    root.change_level(1)
 
             Button:
                 text : "MEDIUM"
                 on_release:
                     root.manager.transition.direction = "up"
-                    root.changeLevel(2)
+                    root.change_level(2)
 
             Button:
                 text : "HARD"
                 on_release:
                     root.manager.transition.direction = "up"
-                    root.changeLevel(3)
+                    root.change_level(3)
 
             Button:
                 id : multiplayer
